fix: 홈리스트 시그니처메뉴 flex wrap 처리

--- a/breadgood-server/src/main/resources/static/css/bakery-list.css
+++ b/breadgood-server/src/main/resources/static/css/bakery-list.css
@@ -170,7 +170,7 @@
 
 .bl-li-signature {
   display: flex;
-  margin-bottom: 6px;
+  flex-wrap: wrap;
   color: #666677;
   font-size: 14px;
 }
@@ -179,6 +179,7 @@
   border-radius: 4px;
   padding: 3px 4px;
   margin-right: 4px;
+  margin-bottom: 6px;
 }
 
 .signature-item.blue {
